Update to Arch Assignments
Updated assignments to Autumn 2020 and deployed PAS naming convention

--- a/Architecture/Assignments/Assignment1.tex
+++ b/Architecture/Assignments/Assignment1.tex
@@ -4,9 +4,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on Moodle \\
+	\textbf{Issue Date:} & As stated on MS Teams \\
 	\hline 
-	\textbf{Submission Date:}  & As stated on Moodle  \\
+	\textbf{Submission Date:}  & As stated on MS Teams \\
 	\hline
 \end{tabularx}
 
@@ -25,36 +25,36 @@ You are required to model a two storey house incorporating a dormer window and t
 	\hline
 	\textbf{Sheet Size} & \textbf{Sheet No.} & \textbf{Title} \\
 	\hline 
-	A4  & A101 & Cover Sheet \\
-	A1  & A102 & Floor Plans \\
-	A1  & A103 & Elevations \\
-	A1  & A104 & Sections and Details \\
+	A4  & A-101 & Cover Sheet \\
+	A1  & A-102 & Floor Plans \\
+	A1  & A-103 & Elevations \\
+	A1  & A-104 & Sections and Details \\
 	\hline
 \end{tabularx}
 
 Details of the requirements for each drawing are given below:\\
 
-\subsection*{A101 - Cover Sheet}
+\subsection*{A-101 - Cover Sheet}
 \begin{itemize}
 	\item Three Dimensional (Aerial View) of the model (scaled to suit the sheet size) Shaded
 	\item A list of the drawings in the design pack
 \end{itemize}
 
 
-\subsection*{A102 - Floor Plans}
+\subsection*{A-102 - Floor Plans}
 \begin{itemize}
-	\item Ground and First Floor Plans @ 1:50 with dimensions, Room Titles ans some fixed furniture
+	\item Ground and First Floor Plans @ 1:50 with dimensions, Room Titles and some fixed furniture
 	\item Two internal camera views, (scaled to suit the sheet size) rendered using the Autodesk 360 cloud rendering service.  \textit{One of the fireplace and one of the kitchen units} 
 \end{itemize}
 
 
-\subsection*{A103 - Elevations}
+\subsection*{A-103 - Elevations}
 \begin{itemize}
 	\item South Elevation @ 1:50
 	\item North, East and West Elevations @ 1:100
 \end{itemize}
 
-\subsection*{A104 - Sections and Details}
+\subsection*{A-104 - Sections and Details}
 \begin{itemize}
 	\item Three sections are required
 	\item Section thro' Kitchen / Sitting Room facing East (towards fireplace) @ 1:100
@@ -78,9 +78,9 @@ Additional Sheets may be submitted if so desired.
 
 \begin{enumerate}
 	\item All drawing sheets must have the LIT Built Environment logo and be clearly marked 'Educational Exercise - Not for Construction'
-	\item You are required to submit you project as a single Revit (.rvt) file through Moodle
+	\item You are required to submit you project as a single Revit (.rvt) file through MS Teams
 	\item Drawings should show all necessary information to communicate design intent
-	\item The Revit filename should be of the form \textit{Semester  + Year + Project No. + First Initial + Surname + K-Number}. An example would be \textbf{'Spring18P01PVeseyK00123456.rvt'}.  Do not use spaces in the filename
+	\item The Revit filename should be of the form used in PAS/BS 1192.  In this case, it will \textit{RARC01-\#\#\#-00-ZZ-M3-A-001-A1-P01}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'RARC01-920-00-ZZ-M3-A-001-A1-P01'}, for K-number K20001920.  Do not use spaces in the filename
 \end{enumerate}
 
 
