--- a/Architecture/Assignments/Assignment2.tex
+++ b/Architecture/Assignments/Assignment2.tex
@@ -4,9 +4,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on Moodle \\
+	\textbf{Issue Date:} & As stated on MS Teams\\
 	\hline 
-	\textbf{Submission Date:}  & As stated on Moodle  \\
+	\textbf{Submission Date:}  & As stated on MS Teams  \\
 	\hline
 \end{tabularx}
 
@@ -105,17 +105,17 @@ Flat toposurface of approx 90m wide x 80mm with Building Pads, some trees, cars 
 	\hline
 	\textbf{Sheet Size} & \textbf{Sheet No.} & \textbf{Title} \\
 	\hline 
-	A1  & B101 & Cover Sheet \\
-	A1  & B102 & Ground Floor Plan \\
-	A1  & B103 & First Floor Plan \\
-	A1  & B104 & North \& South Elevations \\
-	A1  & B105 & East \& West Elevations \\
-	A1  & B106 & Sections, Details and Schedules \\
+	A1  & A-201 & Cover Sheet \\
+	A1  & A-202 & Ground Floor Plan \\
+	A1  & A-203 & First Floor Plan \\
+	A1  & A-204 & North \& South Elevations \\
+	A1  & A-205 & East \& West Elevations \\
+	A1  & A-206 & Sections, Details and Schedules \\
 	\hline
 \end{tabularx}
 
 
-\subsection*{B101 - Cover Sheet}
+\subsection*{A-201 - Cover Sheet}
 \begin{itemize}
 	\item Three Dimensional (Aerial View) of the model
 	\item A list of the drawings in the design pack
@@ -123,30 +123,30 @@ Flat toposurface of approx 90m wide x 80mm with Building Pads, some trees, cars 
 \end{itemize}
 
 
-\subsection*{B102 - Ground Floor Plan}
+\subsection*{A-202 - Ground Floor Plan}
 \begin{itemize}
 	\item Ground Floor Plan @ 1:100 with dimensions and Room Titles
 \end{itemize}
 
 
-\subsection*{B103 - First Floor Plan}
+\subsection*{A-203 - First Floor Plan}
 \begin{itemize}
 	\item First Floor Plan @ 1:100 with dimensions and Room Titles
 \end{itemize}
 
 
 
-\subsection*{B104 - North \& South Elevations}
+\subsection*{A-204 - North \& South Elevations}
 \begin{itemize}
 	\item North \& South Elevation @ 1:100
 \end{itemize}
 
-\subsection*{B105 - East \& West Elevations}
+\subsection*{A-205 - East \& West Elevations}
 \begin{itemize}
 	\item East \& West Elevation @ 1:100
 \end{itemize}
 
-\subsection*{B106 - Sections, Details and Schedules:}
+\subsection*{A-206 - Sections, Details and Schedules:}
 \begin{itemize}
 	\item A longitudinal section facing East (Through Unit 1 Staircase) @ 1:100
 	\item A Cross Section facing North (Facing Unit 1 \& 2 Staircases and Mezzanines)
@@ -167,7 +167,7 @@ Additional Sheets may be submitted if so desired.
 	\item Design drawings should be completed on a minimum of six A1 sheets at the scales stated above.  Additional sheets with detailed information or images may be submitted at your discretion.
 	\item You are required to submit you project as a single Revit (.rvt) file through Moodle
 	\item Drawings should show all necessary information to communicate design intent
-	\item The Revit filename should be of the form \textit{Semester  + Year + Project No. + First Initial + Surname + K-Number}.\\ An example would be \textbf{'Spring18P02PVeseyK00123456.rvt'}.  Do not use spaces in the filename.
+	\item The Revit filename should be of the form used in PAS/BS 1192.  In this case, it will \textit{RARC02-\#\#\#-00-ZZ-M3-A-001-A1-P01}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'RARC02-920-00-ZZ-M3-A-001-A1-P01'}, for K-number K20001920.  Do not use spaces in the filename.
 	\item Your drawings should show all necessary information to communicate design intent. 
 \end{enumerate}
 
