--- a/MEP/Assignments/HeadMatter.tex
+++ b/MEP/Assignments/HeadMatter.tex
@@ -1,12 +1,16 @@
 \documentclass[a4paper, 10pt]{article}
+\usepackage{fontspec}
+\setmainfont{Arial Unicode MS}
+
 \usepackage{pgf}
 \usepackage{eurosym}
-%\usepackage{fontspec}
+
+
 \usepackage{graphicx}
 \usepackage{wasysym}
 \usepackage{hyperref}
 \usepackage{listings}
-\usepackage{pxfonts}
+%\usepackage{pxfonts}
 \usepackage{verbatim}
 \usepackage{color}
 \usepackage{xcolor}
@@ -61,7 +65,7 @@
 				Subject: & \textbf{Building Information Modelling}\\
 								 & \textbf{with Revit MEP}\\
 				Course: & \textbf{BIM with Revit MEP}\\
-				Session: & \textbf{Spring 2020}\\
+				Session: & \textbf{Autumn 2020}\\
 				Lecturer: & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
 				\hline
 			\end{tabular}
