--- a/Architecture/Assignments/Assignment3.tex
+++ b/Architecture/Assignments/Assignment3.tex
@@ -7,9 +7,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on Moodle \\
+	\textbf{Issue Date:} & As stated on MS Teams \\
 	\hline 
-	\textbf{Submission Date:}  & As stated on Moodle  \\
+	\textbf{Submission Date:}  & As stated on MS Teams  \\
 	\hline
 \end{tabularx}
 
@@ -63,6 +63,7 @@ Using the Residential model developed for Assignment 1, make the following amend
 		\item Call-out Detail of the First Floor / External Wall interface @ 1:20
 		\item Call-out Detail of the Ground Floor / External Wall / Foundation interface @ 1:20
 	\end{itemize}
+	\item The filenames should be of the form used in PAS/BS 1192.  In this case, it will \textit{RARC03-\#\#\#-00-ZZ-M3-A-301-A1-P01}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'RARC03-920-00-ZZ-M3-A-301-A1-P01'}, for K-number K20001920.
 \end{enumerate}
 Make use of the Masking and Component tools, and the 'Repeating Detail' functionality in Revit.  Annotations should include, at a minimum, the construction information outlined in items \ref{itm:roof}, \ref{itm:FirstFloor} and \ref{itm:GroundFloor}. 
 
@@ -89,13 +90,13 @@ Using the Commercial Building model developed for Assignment 2, make the followi
 \begin{enumerate}
 	\item Roof: Create a curved extruded roof similar to the diagram shown in Figure \ref{fig:retailbuilding}
 	
-	\item 3D Views: Create 3 Autodesk 360 rendered images and import them into a new sheet, B107.
+	\item 3D Views: Create 3 Autodesk 360 rendered images and import them into a new sheet, A-207.
 	\begin{itemize}
 		\item External view of the building looking through the curtain wall glazing
 		\item Internal view of one retail unit facing the curtain wall, and picking up the stairs
 		\item Internal view of your choice from the First Floor landing 
 	\end{itemize} 
-	\item Solar Study: Create a solar study for the 16\textsuperscript{th} of June 2018 and place a view of 14:30 hours onto sheet B107.  Render your image using the 'shaded' setting; do not fully render.  
+	\item Solar Study: Create a solar study for the 16\textsuperscript{th} of June 2018 and place a view of 14:30 hours onto sheet A-207.  Render your image using the 'shaded' setting; do not fully render.  
 	\item Walk-throughs: Create the following walk-throughs using the 'Shaded' setting.  Do not fully render the animation.  The maximum number of frames required is 300.
 	\item Sloping Toposurface: Create a sloped topographical surface (approx 80m x 90m) incorporating a slope from approx 5m hight at the rear, and 8.0m out from the building, to -225mm at the front of the building, and over the front area of the site.
 	\begin{itemize}
@@ -104,7 +105,7 @@ Using the Commercial Building model developed for Assignment 2, make the followi
 		\item Provide an access road from the edge of the Site to the car park.
 		\item Add street lighting, trees, and other components from the 'Entourage', 'Site' and 'Planting' libraries as necessary 
 	\end{itemize}
-	
+	\item The filenames should be of the form used in PAS/BS 1192.  In this case, it will \textit{RARC03-\#\#\#-00-ZZ-M3-A-302-A1-P01}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'RARC03-920-00-ZZ-M3-A-302-A1-P01'}, for K-number K20001920.
 \end{enumerate}
 
 
@@ -136,22 +137,36 @@ In this part you will create a 10 storey building, typical FFL to FFL of 3.0m. T
 	\item Insulated concrete ground floor slab and suspended Concrete upper floor construction.
 \end{itemize}
 
+The filenames should be of the form used in PAS/BS 1192.  In this case, it will \textit{RARC03-\#\#\#-00-ZZ-M3-A-303-A1-P01}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'RARC03-920-00-ZZ-M3-A-303-A1-P01'}, for K-number K20001920.
 
 
 \newpage
 
 \section*{Part 4 - Interoperability (File Exchange formats)}
 
-Using the Week 2 Original Sample Building, create or export the following file types from Revit
+Using your Assignment 1 Building, create or export the following file types from Revit
 \begin{enumerate}
 	\item Export the floor plan in Autocad .dwg format
 	\item Export the site view in .adsk format.  An Autodesk Exchange file (.adsk) contains building and site models with data for the import into Civil Engineering design applications
 	\item Export the floor plans in .gbXML format, used in Energy Analysis
 	\item Make a .pdf of the floor plan
 \end{enumerate}
-The exported filename should be of the form \textit{Semester  + Year + Project No.+ Part + First Initial + Surname + K-Number}. An example would be \textbf{'Spring18P04-1PVeseyK00123456.rvt'}.  Do not use spaces in the filenames.
+The filenames should be of the form used in PAS/BS 1192.  In this case, it will \textit{RARC03-\#\#\#-00-ZZ-\$\$-A-001-A1-P01}, where \#\#\# is replaced by the last 3 digits of your K-number and \$\$ is the PAS codes for Drawings and Models. An example would be \textbf{'RARC03-920-00-ZZ-MR-A-001-A1-P01'}, for K-number K20001920, energy analysis model.  Please do not use spaces in the filename. The codes are as follows: \\
 
-
+\begin{tabularx}{\textwidth}{ |X|X| }
+	\hline
+	\textbf{Code} & \textbf{Usage} \\
+	\hline 
+	AF  & Animation File  \\
+	CM  & Combined Model  \\
+	CR  & Specific for Clash Detection  \\
+	DR  & 2D Drawing  \\
+	M2  & 2D Model  \\
+	M3  & 3D Model  \\
+	MR  & Model file for other renditions  \\
+	VS  & Visualisation  \\
+	\hline
+\end{tabularx}
 
 
 \end{document}
