--- a/MEP/Assignments/Assignment4.tex
+++ b/MEP/Assignments/Assignment4.tex
@@ -4,9 +4,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on Moodle \\
+	\textbf{Issue Date:} & As stated on Microsoft Teams\\
 	\hline 
-	\textbf{Submission Date:}  & As stated on Moodle  \\
+	\textbf{Submission Date:}  & As stated on Microsoft Teams\\
 	\hline
 \end{tabularx}
 
