--- a/MEP/Assignments/Assignment3.tex
+++ b/MEP/Assignments/Assignment3.tex
@@ -4,9 +4,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on Moodle \\
+	\textbf{Issue Date:} & As stated on Microsoft Teams \\
 	\hline 
-	\textbf{Submission Date:}  & As stated on Moodle  \\
+	\textbf{Submission Date:}  & As stated on Microsoft Teams  \\
 	\hline
 \end{tabularx}
 
@@ -27,6 +27,6 @@ The asset pack for this assignment contains the following items:
 
 
 \section*{Submission}
-Upon completion, create a single zip file of your Revit project including the architectural model. Upload this single zip file to Moodle on or before the submission deadline.  Please do not use .rar or 7-zip compression tools; please use the standard zip compression provided by Windows File Explorer.
+Upon completion, create a single zip file of your Revit project including the architectural model. Upload this single zip file to Microsoft Teams on or before the submission deadline.  Please do not use .rar or 7-zip compression tools; please use the standard zip compression provided by Windows File Explorer.
 
 \end{document}
