Powershell Script Update

--- a/MEP/Assignments/HeadMatter.tex
+++ b/MEP/Assignments/HeadMatter.tex
@@ -1,4 +1,6 @@
 \documentclass[a4paper, 10pt]{article}
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 \usepackage{pgf}
 \usepackage{eurosym}
 \usepackage{graphicx}
@@ -51,17 +53,17 @@
 				
 \begin{figure}
 	\centering
-	\includegraphics[width=0.5\linewidth]{./img/LITlogo}
+	\includegraphics[width=0.5\linewidth]{./Assignments/img/LITlogo}
 \end{figure}
 
 
 \begin{tabularx}{\textwidth}{ |l|X| }
 	\hline
-	Subject: & \textbf{Revit MEP}\\
-	Course: & \textbf{Building Information Modelling with Revit MEP}\\
-	Session: & \textbf{Spring 2021}\\
-	Lecturer: & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
-	Filename: & \textbf{\currfilebase}\\
+	\textbf{Subject:} & Revit MEP\\
+	\textbf{Course:} & Building Information Modelling with Revit MEP\\
+	\textbf{Session:} & Spring 2021\\
+	\textbf{Lecturer:} & Paul Vesey \footnotesize{BEng, MIE, HDip}\\
+	\textbf{Filename:} & \currfilebase\\
 	\hline
 \end{tabularx}
 
