--- a/Architecture/Assignments/HeadMatter.tex
+++ b/Architecture/Assignments/HeadMatter.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper, 10pt]{article}
-%\usepackage{fontspec}
-%\setmainfont{Lato}
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 \usepackage{pgf}
 \usepackage{eurosym}
 \usepackage{graphicx}
@@ -54,17 +54,17 @@
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.5\linewidth]{./img/LITlogo}
+	\includegraphics[width=0.5\linewidth]{./Assignments/img/LITlogo}
 \end{figure}
 
 
 \begin{tabularx}{\textwidth}{ |l|X| }
 	\hline
 	
-	Subject: & \textbf{Building Information Modelling with Revit Architecture}\\
-	Course: & \textbf{Revit Architecture Online}\\
-	Session: & \textbf{Spring 2021}\\
-	Lecturer: & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
-	Filename: & \currfilebase\\
+	\textbf{Subject:} & Building Information Modelling with Revit Architecture\\
+	\textbf{Course:} & Revit Architecture Online\\
+	\textbf{Session:} & Spring 2021\\
+	\textbf{Lecturer:} & Paul Vesey \footnotesize{BEng, MIE, HDip}\\
+	\textbf{Filename:} & \currfilebase\\
 	\hline
 \end{tabularx}
