--- a/Architecture/Assignments/RARC01-LIT-00-ZZ-SP-A-001-A1-P02.tex
+++ b/Architecture/Assignments/RARC01-LIT-00-ZZ-SP-A-001-A1-P02.tex
@@ -1,6 +1,6 @@
 \input{./Assignments/HeadMatter.tex}
 	
-\part*{Assignment 1 (33\%) - Detached 2 Storey Residence with Dormer Window}
+\part*{Assignment 1 (33\%) - Detached 2 Storey Residence}
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
@@ -14,7 +14,7 @@
 \section*{Assignment Outline}
 
 
-You are required to model a two storey house incorporating a dormer window and to digitally submit you project file (.rvt) showing your model on one A4 sheet and four A1 sheets.
+You are required to model a two storey house and to digitally submit you project file (.rvt) showing your model on one A4 sheet and four A1 sheets.
 
 
 \section*{Your Submission should contain the following drawings}
@@ -25,37 +25,37 @@ You are required to model a two storey house incorporating a dormer window and t
 	\hline
 	\textbf{Sheet Size} & \textbf{Sheet No.} & \textbf{Title} \\
 	\hline 
-	A4  & A-1001 & Cover Sheet \\
-	A1  & A-1002 & Floor Plans \\
-	A1  & A-1003 & Elevations \\
-	A1  & A-1004 & Sections and Details \\
-	A1  & A-1005 & Room Usage \\
+	A4  & A-001 & Cover Sheet \\
+	A1  & A-002 & Floor Plans \\
+	A1  & A-003 & Elevations \\
+	A1  & A-004 & Sections and Details \\
+	A1  & A-005 & Room Usage \\
 	\hline
 \end{tabularx}
 
 Details of the requirements for each drawing are given below:\\
 
-\subsection*{A-101 - Cover Sheet}
+\subsection*{A-001 - Cover Sheet}
 \begin{itemize}
 	\item Three Dimensional (Aerial View) of the model (scaled to suit the sheet size) Shaded
 	\item A list of the drawings in the design pack
 \end{itemize}
 
 
-\subsection*{A-102 - Floor Plans}
+\subsection*{A-002 - Floor Plans}
 \begin{itemize}
 	\item Ground and First Floor Plans @ 1:50 with dimensions, Room Titles and some fixed furniture
 	\item Two internal camera views, (scaled to suit the sheet size) rendered using the Autodesk 360 cloud rendering service.  \textit{One of the fireplace and one of the kitchen units} 
 \end{itemize}
 
 
-\subsection*{A-103 - Elevations}
+\subsection*{A-003 - Elevations}
 \begin{itemize}
 	\item South Elevation @ 1:50
 	\item North, East and West Elevations @ 1:100
 \end{itemize}
 
-\subsection*{A-104 - Sections and Details}
+\subsection*{A-004 - Sections and Details}
 \begin{itemize}
 	\item Three sections are required
 	\item Section thro' Kitchen / Sitting Room facing East (towards fireplace) @ 1:100
@@ -69,7 +69,7 @@ Details of the requirements for each drawing are given below:\\
 	\end{itemize} 
 \end{itemize}
 
-\subsection*{A-1005 - Room Usage}
+\subsection*{A-005 - Room Usage}
 \begin{itemize}
 	\item Ground Floor Room usage Color Fill Legend @ 1:50
 	\item First Floor Room usage Color Fill Legend @ 1:50
