--- a/Architecture/Assignments/RARC01-LIT-00-ZZ-SP-A-001-A1-P02.tex
+++ b/Architecture/Assignments/RARC01-LIT-00-ZZ-SP-A-001-A1-P02.tex
@@ -13,9 +13,22 @@
 
 \section*{Assignment Outline}
 
+This assignment will examine the following learning outcomes:
+
+\begin{tabularx}{\textwidth}{ |X|X|X| }
+	\hline
+	\textbf{No.} & \textbf{Learning Outcome} & \textbf{Assessed} \\
+	\hline 
+	1  & Produce multi-view, isometric, and oblique drawings & Yes \\
+	2  & Produce plan views; elevations, and sections of small to medium sized buildings. & Yes \\
+	3  & Edit existing CAD drawings & No \\
+	4  & Produce Revit generated material schedules and take-off lists & Yes \\
+	5  & Use Revit to create presentation graphics and renderings & Yes \\
+	\hline
+\end{tabularx}
+
 
 You are required to model a two storey house incorporating a dormer window and to digitally submit you project file (.rvt) showing your model on one A4 sheet and four A1 sheets.
-
 
 \section*{Your Submission should contain the following drawings}
 
