--- a/Architecture/Assignments/RARC02-LIT-00-ZZ-SP-A-001-A1-P02.tex
+++ b/Architecture/Assignments/RARC02-LIT-00-ZZ-SP-A-001-A1-P02.tex
@@ -12,6 +12,21 @@
 
 \section*{Assignment Outline}
 
+This assignment will examine the following learning outcomes:
+
+\begin{tabularx}{\textwidth}{ |X|X|X| }
+	\hline
+	\textbf{No.} & \textbf{Learning Outcome} & \textbf{Assessed} \\
+	\hline 
+	1  & Produce multi-view, isometric, and oblique drawings & Yes \\
+	2  & Produce plan views; elevations, and sections of small to medium sized buildings. & Yes \\
+	3  & Edit existing CAD drawings & No \\
+	4  & Produce Revit generated material schedules and take-off lists & Yes \\
+	5  & Use Revit to create presentation graphics and renderings & Yes \\
+	\hline
+\end{tabularx}
+
+
 You are required to model a three unit retail building facility to the specification as detailed below and on the sample design drawings.  Your design will also become the part of the basis of Assignment 3.
 
 \section*{Specification}
