--- a/Architecture/Assignments/RARC03-LIT-00-ZZ-SP-A-001-A1-P02.tex
+++ b/Architecture/Assignments/RARC03-LIT-00-ZZ-SP-A-001-A1-P02.tex
@@ -17,7 +17,19 @@
 
 \section*{Assignment Outline}
 
+This assignment will examine the following learning outcomes:
 
+\begin{tabularx}{\textwidth}{ |X|X|X| }
+	\hline
+	\textbf{No.} & \textbf{Learning Outcome} & \textbf{Assessed} \\
+	\hline 
+	1  & Produce multi-view, isometric, and oblique drawings & No \\
+	2  & Produce plan views; elevations, and sections of small to medium sized buildings. & No \\
+	3  & Edit existing CAD drawings & Yes \\
+	4  & Produce Revit generated material schedules and take-off lists & Yes \\
+	5  & Use Revit to create presentation graphics and renderings & Yes \\
+	\hline
+\end{tabularx}
 
 In these exercises you are required to create a number of new items and modify the existing designs created during Assignment 2 and Assignment 3.  This assignment consists of 3 parts, each of which has its own set of deliverables and submission file(s).
 
