--- a/Architecture/Assignments/RARC01-LIT-00-ZZ-SP-A-001-A1-P02.tex
+++ b/Architecture/Assignments/RARC01-LIT-00-ZZ-SP-A-001-A1-P02.tex
@@ -13,9 +13,9 @@
 
 \section*{Assignment Outline}
 
-This assignment will examine the following learning outcomes:
+This assignment will examine the following learning outcomes:\\
 
-\begin{tabularx}{\textwidth}{ |X|X|X| }
+\begin{tabularx}{\textwidth}{ |c|X|c| }
 	\hline
 	\textbf{No.} & \textbf{Learning Outcome} & \textbf{Assessed} \\
 	\hline 
@@ -26,6 +26,25 @@ This assignment will examine the following learning outcomes:
 	5  & Use Revit to create presentation graphics and renderings & Yes \\
 	\hline
 \end{tabularx}
+
+\vspace{1cm}
+
+\begin{tabularx}{\textwidth}{ |l|X| }
+	\hline 
+	\textbf{Excellent (70+\%)} & Faithful recreation of the original drawings with no errors, and shows improvements over the original drawing set\\ 
+	\hline
+	\textbf{Good (56\% to 69\%)} & Recreation of the original drawing set with some minor errors or omissions in presentation and modelling \\
+	\hline
+	\textbf{Acceptable (40\% to 55\%)} & Recreation of the original drawing set with numerous minor errors or omissions in presentation and modelling that could be addressed with minimal additional work \\ 
+	\hline
+	\textbf{Poor ($<$40\%)} & Modelling incomplete, Views missing, Major Annotation Missing, general poor presentation of the design  \\
+	\hline
+\end{tabularx}
+
+\vspace{1cm}
+
+
+
 
 You are required to model a two storey house and to digitally submit you project file (.rvt) showing your model on one A4 sheet and four A1 sheets.
 
