Update Module Code on Assignments

--- a/CADD06013-MEP/Assignments/HeadMatter.tex
+++ b/CADD06013-MEP/Assignments/HeadMatter.tex
@@ -59,7 +59,7 @@
 
 \begin{tabularx}{\textwidth}{ |l|X| }
 	\hline
-	\textbf{Subject:} & Revit MEP\\
+	\textbf{Subject:} & CADD06013 - Revit MEP\\
 	\textbf{Course:} & Building Information Modelling with Revit MEP\\
 	\textbf{Session:} & Spring 2021\\
 	\textbf{Lecturer:} & Paul Vesey \footnotesize{BEng, MIE, HDip}\\
