--- a/CADD06018-Architecture/Assignments/HeadMatter.tex
+++ b/CADD06018-Architecture/Assignments/HeadMatter.tex
@@ -61,7 +61,7 @@
 \begin{tabularx}{\textwidth}{ |l|X| }
 	\hline
 	
-	\textbf{Subject:} & Building Information Modelling with Revit Architecture\\
+	\textbf{Subject:} & CADD06018: BIM with Revit Architecture\\
 	\textbf{Course:} & Revit Architecture Online\\
 	\textbf{Session:} & Autumn 2021\\
 	\textbf{Lecturer:} & Paul Vesey \footnotesize{BEng, MIE, HDip}\\
