--- a/MEP/Assignments/HeadMatter.tex
+++ b/MEP/Assignments/HeadMatter.tex
@@ -61,7 +61,7 @@
 	\hline
 	\textbf{Subject:} & Revit MEP\\
 	\textbf{Course:} & Building Information Modelling with Revit MEP\\
-	\textbf{Session:} & Spring 2021\\
+	\textbf{Session:} & Autumn 2021\\
 	\textbf{Lecturer:} & Paul Vesey \footnotesize{BEng, MIE, HDip}\\
 	\textbf{Filename:} & \currfilebase\\
 	\hline
