--- a/MEP/Assignments/RMEP01-LIT-00-ZZ-SP-E-001-A1-P02.tex
+++ b/MEP/Assignments/RMEP01-LIT-00-ZZ-SP-E-001-A1-P02.tex
@@ -6,15 +6,32 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on Microsoft Teams \\
+	\textbf{Issue Date:} & 5$^{th}$ October 2021 \\
 	\hline 
-	\textbf{Submission Date:}  & As stated on Microsoft Teams  \\
+	\textbf{Submission Date:}  & 23$^{rd}$ October 2021 \\
 	\hline
 \end{tabularx}
 
 
 \section*{Continuous Assessment Marks}
 This assignment will account for 25\% of the 100\% allocated for continuous assessment in this module
+
+This assignment will examine the following learning outcomes:\\
+
+\begin{tabularx}{\textwidth}{ |c|X|c| }
+	\hline
+	\textbf{No.} & \textbf{Learning Outcome} & \textbf{Assessed} \\
+	\hline 
+	1  & Create and analyse Duct layouts in Revit MEP & No \\
+	2  & Create and analyse Pipe Layouts in Revit MEP & No \\
+	3  & Create and Analyse Electrical Layouts in Revit MEP & Yes \\
+	4  & Co-ordinate Mechanical and Electrical Systems in Revit MEP & Yes \\
+	\hline
+\end{tabularx}
+
+
+
+
 
 \section*{Assignment Outline}
 You will start this assignment by creating a new Revit project based on the electrical template. You will then have to link to the Architectural model for reference.
@@ -32,7 +49,7 @@ The asset pack for this assignment contains the following items:
 
 
 \section*{Submission}
-Upon completion, create a single zip file of your Revit project including the architectural model. Upload this single zip file to Microsoft Teams on or before the submission deadline.  Please do not use .rar or 7-zip compression tools; please use the standard zip compression provided by Windows File Explorer.
+Upon completion, upload your Revit project file, the architectural model, and a pdf of your drawing to Microsoft Teams on or before the submission deadline.
 
 
 \section*{Upload Checklist}
