--- a/MEP/Assignments/RMEP04-LIT-00-ZZ-SP-Y-001-A1-P02.tex
+++ b/MEP/Assignments/RMEP04-LIT-00-ZZ-SP-Y-001-A1-P02.tex
@@ -4,14 +4,27 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & 9$^{th}$ March 2021\\
+	\textbf{Issue Date:} & 5$^{th}$ October 2021\\
 	\hline 
-	\textbf{Submission Date:}  & 10$^{th}$ April 2021\\
+	\textbf{Submission Date:}  & 11$^{th}$ December 2021\\
 	\hline
 \end{tabularx}
 
 \section*{Continuous Assessment Marks}
 This assignment will account for 25\% of the 100\% allocated for continuous assessment in this module
+This assignment will examine the following learning outcomes:\\
+
+\begin{tabularx}{\textwidth}{ |c|X|c| }
+	\hline
+	\textbf{No.} & \textbf{Learning Outcome} & \textbf{Assessed} \\
+	\hline 
+	1  & Create and analyse Duct layouts in Revit MEP & Yes \\
+	2  & Create and analyse Pipe Layouts in Revit MEP & Yes \\
+	3  & Create and Analyse Electrical Layouts in Revit MEP & Yes \\
+	4  & Co-ordinate Mechanical and Electrical Systems in Revit MEP & Yes \\
+	\hline
+\end{tabularx}
+
 
 \section*{Assignment Outline}
 This assignment involves 5 parts, each representing 20\% of the overall assignment. During the completion of this assignment you will create multiple Revit project files and multiple Revit Family parts.
@@ -26,7 +39,7 @@ The asset pack for this assignment contains the following items:
 
 
 \section*{Submission}
-All files should be kept in a single folder entitled ‘Assignment4’. Once you have completed the assignment, you should zip this folder into a single archive and upload to Microsoft Teams. Upload this single zip file on or before the submission deadline.
+All files should be kept in a single folder entitled ‘Assignment4’. Once you have completed the assignment, you should zip this folder into a single archive and upload to Microsoft Teams. Upload this single zip file on or before the submission deadline.  Please do not use RAR or 7-Zip to archive the files; use the functionality in Windows Explorer.
 
 
 
