--- a/MEP/Assignments/RMEP03-LIT-00-ZZ-SP-M-001-A1-P02.tex
+++ b/MEP/Assignments/RMEP03-LIT-00-ZZ-SP-M-001-A1-P02.tex
@@ -4,15 +4,30 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & 23$^{rd}$ February 2021 \\
+	\textbf{Issue Date:} & 5$^{th}$ October 2021 \\
 	\hline 
-	\textbf{Submission Date:}  & 27$^{th}$ March 2021   \\
+	\textbf{Submission Date:}  & 27$^{th}$ November 2021   \\
 	\hline
 \end{tabularx}
 
 
 \section*{Continuous Assessment Marks}
 This assignment will account for 25\% of the 100\% allocated for continuous assessment in this module
+
+This assignment will examine the following learning outcomes:\\
+
+\begin{tabularx}{\textwidth}{ |c|X|c| }
+	\hline
+	\textbf{No.} & \textbf{Learning Outcome} & \textbf{Assessed} \\
+	\hline 
+	1  & Create and analyse Duct layouts in Revit MEP & No \\
+	2  & Create and analyse Pipe Layouts in Revit MEP & Yes \\
+	3  & Create and Analyse Electrical Layouts in Revit MEP & No \\
+	4  & Co-ordinate Mechanical and Electrical Systems in Revit MEP & Yes \\
+	\hline
+\end{tabularx}
+
+
 
 \section*{Assignment Outline}
 You will start this assignment by creating a new Revit project based on the piping template. You will then have to link to the Architectural model for reference.  You are required to model three pipe systems, one \textbf{Hydronic Supply} system and one \textbf{Hydronic Return} system and one \textbf{Fire Protection} system as depicted in the drawings that accompany this specification. In order to complete this work you will need to place appropriate sprinklers and radiators as shown on the drawings. The radiator family part has been provided to you. It will be necessary to modify its clearance parameters to effectively model the hydronic systems.  You will also need to create view filters for the Fire System as Revit the standard template does not provide one. You will also have to set the view range parameters as necessary.  You are also required to create three (3) A1 drawing sheets using the LIT title block provided. These sheets should be populated with the views and schedules as shown.  Pipe schedules and are to be placed on the appropriate sheets. All drawings sheets and views are to be replicated in your assignment. You will also need to make use of the tagging functionality in Revit as necessary.\\
@@ -21,13 +36,14 @@ The asset pack for this assignment contains the following items:
 \begin{enumerate}
 	\item LIT Title-block
 	\item Revit Architectural Model
-	\item Completed Drawing in pdf format
+	\item Completed Drawings in pdf format
 	\item Radiator Family sourced from the NBS
+	\item Pipe Accessory Tag Family File
 \end{enumerate}
 
 
 \section*{Submission}
-Upon completion, create a single zip file of your Revit project including the architectural model. Upload this single zip file to Microsoft Teams on or before the submission deadline.  Please do not use .rar or 7-zip compression tools; please use the standard zip compression provided by Windows File Explorer.
+Upon completion, upload your Revit project file, the architectural model, and a pdf of your drawing to Microsoft Teams on or before the submission deadline.
 
 \section*{Upload Checklist}
 
@@ -36,9 +52,9 @@ Upon completion, create a single zip file of your Revit project including the ar
 	\textbf{Item} & \textbf{Format} & \textbf{Filename} \\
 	\hline
 	Revit File  & Revit Project File & RMEP03-***-00-ZZ-M3-M-001-A1-P01.rvt \\
-	A1 Drawing  & Adobe pdf & RMEP03-***-00-ZZ-DR-M-301-A1-P01.pdf  \\
-	A1 Drawing  & Adobe pdf & RMEP03-***-00-ZZ-DR-M-302-A1-P01.pdf  \\
-	A1 Drawing  & Adobe pdf & RMEP03-***-00-ZZ-DR-M-303-A1-P01.pdf  \\
+	A1 Drawing  & Adobe pdf & RMEP03-***-00-ZZ-DR-M-101-A1-P01.pdf  \\
+	A1 Drawing  & Adobe pdf & RMEP03-***-00-ZZ-DR-M-102-A1-P01.pdf  \\
+	A1 Drawing  & Adobe pdf & RMEP03-***-00-ZZ-DR-M-103-A1-P01.pdf  \\
 	\hline
 \end{tabular}
 
