Sheet Update and A4 Update

--- a/CADD06013-MEP/SP/RMEP04-TUS-00-ZZ-SP-Y-001-A1-P01.tex
+++ b/CADD06013-MEP/SP/RMEP04-TUS-00-ZZ-SP-Y-001-A1-P01.tex
@@ -4,9 +4,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & 5$^{th}$ October 2021\\
+	\textbf{Issue Date:} & 3$^{rd}$ March 2022\\
 	\hline 
-	\textbf{Submission Date:}  & 11$^{th}$ December 2021\\
+	\textbf{Submission Date:}  & 2$^{nd}$ April 2022\\
 	\hline
 \end{tabularx}
 
@@ -49,7 +49,7 @@ This assignment involves 5 parts, each representing 20\% of the overall assignme
 
 The asset pack for this assignment contains the following items:
 \begin{enumerate}
-	\item LIT Title-block
+	\item TUS Title-block
 	\item Revit Architectural Model
 	\item Furniture Images captured from Revit
 \end{enumerate}
@@ -65,7 +65,7 @@ All files should be kept in a single folder entitled ‘Assignment4’. Once you
 \newpage
 
 \section*{Part 1 - Fan Coil Unit}
-This section involves the creation of a simple fan coil unit Revit family. The family part will have an electrical connection, two duct connections, and two hydronic connections as shown in the table below. The geometry is a simple box shape with the connections applied to three reference planes in the configuration shown. You should use the ‘Metric Mechanical Equipment’ family template to create this part. Do not use either of the hosted templates available in Revit.  Your completed Revit Family should be named \textbf{‘FanCoilUnit.rfa’} and included in your submission folder.\\
+This section involves the creation of a simple fan coil unit Revit family. The family part will have an electrical connection, two duct connections, and two hydronic connections as shown in the table below. The geometry is a simple box shape with the connections applied to three reference planes in the configuration shown. You should use the ‘Metric Mechanical Equipment’ family template to create this part. Do not use either of the hosted templates available in Revit.  Your completed Revit Family should be named \textbf{‘RMEP04-***-00-ZZ-M3-M-Pr\_70\_65\_03\_29-401-A1-P01.rfa’} and included in your submission folder.\\
 
 \begin{figure}[h]
 	\centering
@@ -99,7 +99,7 @@ This section involves the creation of a simple fan coil unit Revit family. The f
 	\hline
 	\textbf{Item} & \textbf{Format} & \textbf{Filename} \\
 	\hline
-	Revit File  & Revit Family File & FanCoilUnit.rfa \\
+	Revit File  & Revit Family File & RMEP04-***-00-ZZ-M3-M-Pr\_70\_65\_03\_29-401-A1-P01.rvt\\
 	Revit File  & Revit Project File & RMEP04-***-00-ZZ-M3-M-401-A1-P01.rvt\\
 	A1 Drawing  & Adobe pdf & RMEP04-***-00-ZZ-DR-M-401-A1-P01.pdf  \\
 	\hline
@@ -110,7 +110,7 @@ This section involves the creation of a simple fan coil unit Revit family. The f
 
 
 \section*{Part 2 - Generic Family Part}
-In this section you are going to create a simple box shape with adjustable height, length and width. Once this is created you are going to create 3 types of the family and insert an instance of each into a Revit project. The family part should have three (3) reference planes named ‘Length’, ‘Width’ and ‘Height’. The family types should have the dimensions as shown in the table below.  Your completed Revit Family should be named \textbf{‘ParaBox.rfa’} and included in your submission folder.  Your completed Revit Project should be named ‘RMEP04-***-00-ZZ-M3-M-402-A1-P01.rvt’ and included in your submission folder. Fig: \ref{fig:GenericFamilyPart1}\\
+In this section you are going to create a simple box shape with adjustable height, length and width. Once this is created you are going to create 3 types of the family and insert an instance of each into a Revit project. The family part should have three (3) reference planes named ‘Length’, ‘Width’ and ‘Height’. The family types should have the dimensions as shown in the table below.  Your completed Revit Family should be named \textbf{‘RMEP04-***-00-ZZ-M3-M-Pr\_20\_29\_08\_08-402-A1-P01.rfa’} and included in your submission folder.  Your completed Revit Project should be named ‘RMEP04-***-00-ZZ-M3-M-402-A1-P01.rvt’ and included in your submission folder. Fig: \ref{fig:GenericFamilyPart1}\\
 
 
 \begin{tabularx}{\textwidth}{ |X|c|c|c| }
@@ -147,7 +147,7 @@ In this section you are going to create a simple box shape with adjustable heigh
 	\hline
 	\textbf{Item} & \textbf{Format} & \textbf{Filename} \\
 	\hline
-	Revit File  & Revit Family File & ParaBox.rfa \\
+	Revit File  & Revit Family File & RMEP04-***-00-ZZ-M3-M-Pr\_20\_29\_08\_08-402-A1-P01.rfa \\
 	Revit File  & Revit Project File & RMEP04-***-00-ZZ-M3-M-402-A1-P01.rvt\\
 	A1 Drawing  & Adobe pdf & RMEP04-***-00-ZZ-DR-M-402-A1-P01.pdf  \\
 	\hline
@@ -289,7 +289,7 @@ In this section you will use the fabrication parts functionality in Revit to cre
 	\hline
 	\textbf{Item} & \textbf{Format} & \textbf{Filename} \\
 	\hline
-	Revit File  & Revit Family File & FanCoilUnit.rfa \\
+	Revit File  & Revit Family File & RMEP04-***-00-ZZ-M3-M-Pr\_70\_65\_03\_29-401-A1-P01.rvt\\
 	Revit File  & Revit Project File & RMEP04-***-00-ZZ-M3-M-401-A1-P01.rvt\\
 	A1 Drawing  & Adobe pdf & RMEP04-***-00-ZZ-DR-M-401-A1-P01.pdf  \\
 	\hline
@@ -298,7 +298,7 @@ In this section you will use the fabrication parts functionality in Revit to cre
 	\hline
 	\textbf{Item} & \textbf{Format} & \textbf{Filename} \\
 	\hline
-	Revit File  & Revit Family File & ParaBox.rfa \\
+	Revit File  & Revit Family File & RMEP04-***-00-ZZ-M3-M-Pr\_20\_29\_08\_08-402-A1-P01.rfa \\
 	Revit File  & Revit Project File & RMEP04-***-00-ZZ-M3-M-402-A1-P01.rvt\\
 	A1 Drawing  & Adobe pdf & RMEP04-***-00-ZZ-DR-M-402-A1-P01.pdf  \\
 	\hline
