--- a/CADD06020-MEP/SP/RMEP04-TUS-XX-XX-SP-Y-001-A1-P04.tex
+++ b/CADD06020-MEP/SP/RMEP04-TUS-XX-XX-SP-Y-001-A1-P04.tex
@@ -1,12 +1,12 @@
-\input{./SP/HeadMatter.tex}
+\input{./HeadMatter.tex}
 	
 \part*{Assignment 4 - Miscellaneous Tasks}
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & 3$^{rd}$ March 2022\\
+	\textbf{Issue Date:} & 8$^{th}$ November 2022\\
 	\hline 
-	\textbf{Submission Date:}  & 2$^{nd}$ April 2022\\
+	\textbf{Submission Date:}  & 11$^{th}$ December 2022\\
 	\hline
 \end{tabularx}
 
@@ -69,7 +69,7 @@ This section involves the creation of a simple fan coil unit Revit family. The f
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/FanCoilUnit.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/FanCoilUnit.jpg}
 	\caption{Fan Coil Unit}
 	\label{fig:fanCoilUnit}
 \end{figure}
@@ -126,7 +126,7 @@ In this section you are going to create a simple box shape with adjustable heigh
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/ParaBox1.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/ParaBox1.jpg}
 	\caption{Generic Family Part}
 	\label{fig:GenericFamilyPart1}
 \end{figure}
@@ -134,7 +134,7 @@ In this section you are going to create a simple box shape with adjustable heigh
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/ParaBox2.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/ParaBox2.jpg}
 	\caption{Generic Family Part}
 	\label{fig:GenericFamilyPart2}
 \end{figure}
@@ -163,7 +163,7 @@ Revit includes auto routing functionality for ducts and pipe. In this section yo
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\linewidth]{./SP/img/AutoRouteDuct.jpg}
+	\includegraphics[width=0.9\linewidth]{./img/AutoRouteDuct.jpg}
 	\caption{Revit Auto-routed Duct Layouts}
 	\label{fig:AutorouteDuct}
 \end{figure}
@@ -171,7 +171,7 @@ Revit includes auto routing functionality for ducts and pipe. In this section yo
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/AutoRoutePipe.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/AutoRoutePipe.jpg}
 	\caption{Revit Auto-routed Pipe Layouts}
 	\label{fig:AutoroutePipe}
 \end{figure}
@@ -202,7 +202,7 @@ Revit Schedule with Images
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/RevitSchedule.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/RevitSchedule.jpg}
 	\caption{Revit Schedule with Images}
 	\label{fig:ScheduleWithImages}
 \end{figure}
@@ -217,7 +217,7 @@ In this section you will create a 1:50 legend for the furniture in the architect
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/RevitLegend.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/RevitLegend.jpg}
 	\caption{Revit Legend with Images}
 	\label{fig:RevitLegend}
 \end{figure}
@@ -247,7 +247,7 @@ In this section you will use the fabrication parts functionality in Revit to cre
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/FabParts.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/FabParts.jpg}
 	\caption{Duct Layout using Fabrication Parts}
 	\label{fig:FabParts}
 \end{figure}
@@ -255,7 +255,7 @@ In this section you will use the fabrication parts functionality in Revit to cre
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{./SP/img/FabPartsReverse.jpg}
+	\includegraphics[width=0.7\linewidth]{./img/FabPartsReverse.jpg}
 	\caption{Duct Layout using Fabrication Parts (Reverse Angle)}
 	\label{fig:FabPartsReverse}
 \end{figure}
