--- a/CADD06020-MEP/SP/HeadMatter.tex
+++ b/CADD06020-MEP/SP/HeadMatter.tex
@@ -53,7 +53,7 @@
 				
 \begin{figure}
 	\centering
-	\includegraphics[width=0.5\linewidth]{./SP/img/TUSlogo}
+	\includegraphics[width=0.5\linewidth]{./img/TUSlogo}
 \end{figure}
 
 
