Update for Assignment 1

--- a/CADD06018-Architecture/SP/HeadMatter.tex
+++ b/CADD06018-Architecture/SP/HeadMatter.tex
@@ -54,7 +54,7 @@
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.5\linewidth]{./SP/img/TUSlogo}
+	\includegraphics[width=0.5\linewidth]{./img/TUSlogo}
 \end{figure}
 
 
