--- a/CADD06018-Architecture/SP/CADD06021-01-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
+++ b/CADD06018-Architecture/SP/CADD06021-01-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
@@ -112,7 +112,6 @@ Details of the requirements for each drawing are given below:\\
 
 \subsection*{AR-0006 - Sections, Details and Schedules}
 \begin{itemize}
-	\item Three sections are required
 	\item Section thro' Kitchen / Sitting Room facing East @ 1:100
 	\item Section thro' Kitchen / Sitting Room facing West (towards kitchen units) @ 1:100
 	\item Section thro' the Hallway / Landing showing the Stairs @ 1:100
@@ -158,7 +157,7 @@ The total floor area of the house should be approx 150$m^2$\\
 
 The following design may be used as a guide.  You may modify the proportions provided you maintain a protrusion at the front of the building.
 
-
+\subsection{Ground Floor}
 \begin{itemize}
 	\item Entrance Hall (2400mm wide)
 	\item Universally Accessible Bathroom / Toilet
@@ -180,7 +179,7 @@ The following design may be used as a guide.  You may modify the proportions pro
 
 
 \newpage
-
+\subsection{Upper Floor Floor}
 \begin{itemize}
 	\item 3 Bedrooms with en-suite sanitary facilities
 	\item Main Bathroom with Bath or Shower, WC and sink
@@ -203,47 +202,49 @@ The following design may be used as a guide.  You may modify the proportions pro
 
 \textbf{External Wall Specification} 
 
-External walls are to be twin leaf cavity construction and be of a 4 part Stacked Wall Type
-Wall-Ext-Stacked\_317 (4-Part-Dom) with the following layers
+External walls are to be twin leaf cavity construction.
 
 \begin{enumerate}
-	\item L1\_Wall-Ext-Cav\_102Bwk-50Air-65Ins-100DBlk-15Rnd\&P
+	\item EF\_25\_10\_25\_Wall-Ext-Cav\_102Bwk-50Air-65Ins 100DBlk-15Rnd\&P
 	\begin{itemize}
-		\item Layer 1 (TopLayer) 'Variable'
-		\item (332mm wide insulated Cavity Walls over DPC level - Generally)
+		\item 332mm wide insulated Cavity Walls over DPC level - Generally
 		\item Made up of 102.5mm Brick / 50mm Air-gap / 65mm Insulation / 100mm Blockwork inner leaf
 		\item Internal Finish 15mm (total) Render and Plaster
 	\end{itemize}
 	
-	\item L2\_Wall-Ext\_Cav\_20Rnd-100Blk-50Air-65Ins-100DBlk-25Ins
+	\item EF\_25\_10\_25\_Wall-Ext-Cav\_20Rnd-100Blk-50Air-65Ins-100DBlk-25Ins
 	\begin{itemize}
-		\item Layer 2 (Intermediate Layer) 225mm high
-		\item (360mm wide insulated Cavity Wall at Plinth level)
+		\item 360mm wide insulated Cavity Wall - not used
 		\item 20mm Cement Render (Plinth) / 100mm block / 50mm Air-gap / 65mm Insulation / 100mm Block
 		\item 25mm thick perimeter insulation up-stand to internal face
 	\end{itemize}
 	
 	
-	\item L3\_Wall-Ext-Cav\_100Blk-115Conc-100DBlk (Rising Wall)
+	\item EF\_25\_10\_25\_Wall-Ext-Cav\_100Blk-115Conc-100Blk
 	\begin{itemize}
-		\item Layer 3 (Intermediate Layer) 225mm high
-		\item (315mm wide un-insulated Rising Wall)
+		\item 315mm wide un-insulated Rising Wall
 		\item 100mm Block / 115mm wide Concrete filled cavity / 100mm Block inner leaf
 	\end{itemize}
 	
 	
-	\item L4\_Wall-Solid-440\_Trench-Blk
+	EF\_20\_05\_Wall-Fnd\_440DBlk (Trench Blockwork)
 	\begin{itemize}
-		\item Layer 4 (Base Layer) 675mm high
-		\item (440mm wide Solid Trench Blockwork)
+		\item 440mm wide Solid Trench Blockwork
 	\end{itemize}
+
+	EF\_25\_10\_25\_Wall\_225DBlk (Block on Flat)
+	\begin{itemize}
+		\item 245mm wide Blockwork
+		\item 15mm Render and Plaster / 215mm Blockwork / 15mm Render and Plaster
+	\end{itemize}
+
 \end{enumerate}
 
-Foundations (Footings)
+\textbf{Foundations (Footings)}
 
 \begin{itemize}
-	\item 1350 wide x 450 deep strip foundation
-	\item Top of Strip foundation to be 1050mm below Gr. Floor level
+	\item 910 wide x 350 deep strip foundation
+	\item Top of Strip foundation to be 900mm below Gr. Floor level
 \end{itemize}
 
 
