--- a/CADD06018-Architecture/SP/CADD06021-02-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
+++ b/CADD06018-Architecture/SP/CADD06021-02-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
@@ -4,9 +4,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on MS Teams\\
+	\textbf{Issue Date:} & 14$^{th}$ March 2023\\
 	\hline 
-	\textbf{Submission Date:}  & As stated on MS Teams  \\
+	\textbf{Submission Date:}  & 23$^{rd}$ April 2023  \\
 	\hline
 \end{tabularx}
 
@@ -147,7 +147,7 @@ Flat toposurface of approx 90m wide x 80mm with Building Pads, some trees, cars 
 \end{tabularx}
 
 
-\subsection*{A-201 - Cover Sheet}
+\subsection*{AR-0001 - Cover Sheet}
 \begin{itemize}
 	\item Three Dimensional (Aerial View) of the model
 	\item A list of the drawings in the design pack
@@ -155,30 +155,30 @@ Flat toposurface of approx 90m wide x 80mm with Building Pads, some trees, cars 
 \end{itemize}
 
 
-\subsection*{A-202 - Ground Floor Plan}
+\subsection*{AR-0002 - Ground Floor Plan}
 \begin{itemize}
 	\item Ground Floor Plan @ 1:100 with dimensions and Room Titles
 \end{itemize}
 
 
-\subsection*{A-203 - First Floor Plan}
+\subsection*{AR-0003 - First Floor Plan}
 \begin{itemize}
 	\item First Floor Plan @ 1:100 with dimensions and Room Titles
 \end{itemize}
 
 
 
-\subsection*{A-204 - North \& South Elevations}
+\subsection*{AR-0004 - North \& South Elevations}
 \begin{itemize}
 	\item North \& South Elevation @ 1:100
 \end{itemize}
 
-\subsection*{A-205 - East \& West Elevations}
+\subsection*{AR-0005 - East \& West Elevations}
 \begin{itemize}
 	\item East \& West Elevation @ 1:100
 \end{itemize}
 
-\subsection*{A-206 - Sections, Details and Schedules:}
+\subsection*{AR-0006 - Sections, Details and Schedules:}
 \begin{itemize}
 	\item A longitudinal section facing East (Through Unit 1 Staircase) @ 1:100
 	\item A Cross Section facing North (Facing Unit 1 \& 2 Staircases and Mezzanines)
